--- a/src/main/resources/templates/main/login-header-no-noti.html
+++ b/src/main/resources/templates/main/login-header-no-noti.html
@@ -316,7 +316,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href=""
+                                                href="/support/support-list"
                                             >
                                                 <p>후원</p>
                                             </a>
