--- a/src/main/resources/static/css/support/support-write.css
+++ b/src/main/resources/static/css/support/support-write.css
@@ -15,6 +15,7 @@
     min-width: 760px;
     max-width: 824px;
     padding: 40px 32px;
+    margin: 0 auto;
 }
 .content-container > main,
 .content-container > menu.sub-tab {
@@ -38,7 +39,7 @@ body,
 html {
     background-color: #fff;
     font: 12px / 18px "Noto Sans KR", NanumGothic, "나눔고딕", "Nanum Gothic",
-        "맑은 고딕", "Malgun Gothic", Dotum;
+    "맑은 고딕", "Malgun Gothic", Dotum;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
@@ -273,7 +274,7 @@ select {
     display: flex;
     flex-direction: column;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     overflow: hidden;
     position: relative;
     visibility: inherit !important;
@@ -500,3 +501,13 @@ ul {
 .date-container {
     display: flex;
 }
+
+.submit-button.disable {
+    color: rgb(191, 198, 210);
+    background-color: rgb(233, 235, 237);
+}
+
+.submit-button.disable:hover {
+    cursor: default;
+}
+
