--- a/src/main/resources/static/css/support/support-inquiry.css
+++ b/src/main/resources/static/css/support/support-inquiry.css
@@ -32,7 +32,7 @@ html {
     text-size-adjust: none;
     background-color: #fff;
     font: 12px / 18px "Noto Sans KR", NanumGothic, "나눔고딕", "Nanum Gothic",
-        "맑은 고딕", "Malgun Gothic", Dotum;
+    "맑은 고딕", "Malgun Gothic", Dotum;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
@@ -74,7 +74,7 @@ html {
 }
 .thumbnail-item {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07))
-        rgb(236, 236, 236);
+    rgb(236, 236, 236);
 }
 .slick-track::after {
     clear: both;
@@ -86,9 +86,9 @@ html {
     width: 100%;
     height: 200px;
     background: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.15) 0%,
-        rgba(0, 0, 0, 0) 96.05%
+            0deg,
+            rgba(0, 0, 0, 0.15) 0%,
+            rgba(0, 0, 0, 0) 96.05%
     );
 }
 main,
@@ -590,23 +590,23 @@ a {
     font-weight: 700;
 }
 
-.donation-btn-container {
+.support-btn-container {
     position: relative;
     display: flex;
+    align-items: center;
     font-size: 12px;
     line-height: 18px;
     letter-spacing: -0.25px;
+    justify-content: space-evenly;
 }
 
-.donation-btn-style {
+.support-btn-style {
     position: relative;
     display: inline-flex;
     justify-content: center;
-
     align-items: center;
     border-radius: 4px;
     cursor: pointer;
-    border: 0px;
     text-align: center;
     box-sizing: border-box;
     background-color: rgb(38, 86, 246);
@@ -619,16 +619,15 @@ a {
     width: 100%;
 }
 
-.donation-btn-style2 {
+.support-btn-style2 {
     margin-top: 10px;
     position: relative;
     display: inline-flex;
     justify-content: center;
-
     align-items: center;
+    background-color: white;
     border-radius: 4px;
     cursor: pointer;
-    border: 0px;
     text-align: center;
     box-sizing: border-box;
     color: rgb(38, 86, 246);
@@ -638,17 +637,61 @@ a {
     line-height: 23px;
     letter-spacing: -0.5px;
     font-weight: 700;
-    width: 100%;
+
+    width:142px;
 }
 
-.donation-btn-style:hover {
+.edit-button{
+    color: rgb(38, 86, 246);
+    border: 1px solid rgb(38, 86, 246);
+    cursor: pointer;
+    border-radius: 4px;
+    background-color:white;
+}
+.delete-button{
+    color: rgb(38, 86, 246);
+    border: 1px solid rgb(38, 86, 246);
+    cursor: pointer;
+    border-radius: 4px;
+    background-color:white;
+    margin-left: 5px;
+}
+.edit-button:hover{
+    background-color: rgb(244, 245, 248);
+}
+.delete-button:hover{
+    background-color: rgb(244, 245, 248);
+}
+
+.support-btn-style:hover {
     background-color: rgb(78, 118, 249);
 }
-.donation-btn-style2:hover {
+.support-btn-style2:hover {
     background-color: rgb(244, 245, 248);
 }
 #delete-btn:hover {
     background-color: rgb(244, 245, 248);
+}
+
+#load-more{
+    margin-top: 10px;
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    box-sizing: border-box;
+    color: rgb(38, 86, 246);
+    border: 0.3px solid rgb(38, 86, 246);
+    padding: 11px 20px;
+    font-size: 15px;
+    line-height: 23px;
+    letter-spacing: -0.5px;
+    font-weight: 700;
+    width: 100%;
+    background-color:white;
 }
 
 .comment-wrap-fr {
@@ -786,10 +829,10 @@ a {
     flex-wrap: wrap;
 }
 .comment-container
-    .contest-comment-show
-    .contest-comment-userinfo
-    > div
-    .comment {
+.contest-comment-show
+.contest-comment-userinfo
+> div
+.comment {
     margin: 0px 5px;
     font-size: 12px;
     line-height: 18px;
@@ -818,7 +861,7 @@ a {
 }
 
 .comment-textarea {
-    width: 560px;
+    width: 760px;
     height: 80px;
     padding: 10px;
     font-size: 14px;
@@ -826,6 +869,7 @@ a {
     border-radius: 5px;
     resize: none;
     outline: none;
+    margin-top:20px;
 }
 
 .submit-comment-button {
@@ -956,3 +1000,122 @@ label {
     height: 50px;
     margin: 0 -15px -14px;
 }
+
+div {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+/*지원 모달창*/
+.alert-modal-inner-1u03v {
+    padding: 40px 51px;
+    box-shadow: rgba(0, 0, 0, .3);
+    box-sizing: border-box;
+    background: #fff;
+    border-radius: 16px;
+}
+
+.alert-txt-box-2bji8 {
+    text-align: center;
+}
+
+.alert-txt-box-2bji8 span.alert-ico-1mtdg {
+    margin-bottom: 25px;
+    display: inline-block;
+    width: 60px;
+    height: 61px;
+    background: url(https://accounts-front.stunning.kr/assets/img/common/img-correct-check@2x.png) 50% 50% no-repeat;
+    background-size: 60px 61px;
+}
+
+.alert-ico-1mtdg {
+    word-break: keep-all;
+}
+
+.alert-txt-box-2bji8 p {
+    font-weight: 700;
+    color: #6f7785;
+}
+
+.alert-txt-box-2bji8 p {
+    font-size: 15px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: -.288462px;
+}
+
+p {
+    font-family: inherit;
+    margin-bottom: 0;
+}
+
+p {
+    display: block;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+}
+
+.alert-btn-complete {
+    margin-top: 52px;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 56px;
+    line-height: 56px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+    color: #fff;
+    border-radius: 5px;
+    background: #141414;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    vertical-align: middle;
+    font-family: "Pretendard" !important;
+    -webkit-font-smoothing: antialiased;
+}
+
+.edit-button img,
+.delete-button img {
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+}
+.modify-comment{
+    margin-top: 12px;
+    width: 95%;
+    height: 98px;
+    border: 0;
+    box-sizing: border-box;
+    color: #373f57;
+    font-size: 14px;
+    line-height: 24px;
+    background-color: #fff;
+    resize: none;
+}
+
+.modify-icon, .delete-icon{
+    width: 24px;
+    height: 24px;
+}
+
+li{
+    list-style-type: none; /* 마커 제거 */
+    padding: 0; /* 기본 패딩 제거 */
+    margin: 0; /* 기본 마진 제거 */
+}
+
+.edit-textarea {
+    width: 700px;
+    height: 80px;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    resize: none;
+    outline: none;
+    margin-top:20px;
+}
+
