--- a/src/main/resources/templates/support/support-list.html
+++ b/src/main/resources/templates/support/support-list.html
@@ -23,6 +23,9 @@
     <div th:if="${!isLogin}">
         <th:block th:replace="~{main/basic-header :: header}"></th:block>
     </div>
+    <div th:if="${successMessage}" class="alert alert-success" role="alert">
+        <span th:text="${successMessage}"></span>
+    </div>
         <div class="main-container content">
             <main class="section-container">
                 <section>
@@ -32,6 +35,7 @@
                             class="accordion-container contest-list-filters"
                             type="box"
                         >
+<!--                                <div class="write-introduce" th:if="${memberType == 'NORMAL'}">-->
                             <div class="write-introduce">
                                 <div class="title">편하게 작성하세요!</div>
                                 <div class="desc">
@@ -107,6 +111,9 @@
         const pagination = [[${pagination}]];
         // 초기 목록과 페이지네이션 렌더링
         showList({ supports, pagination });
+    </script>
+    <script th:if="${successMessage}">
+        alert([[${successMessage}]]);
     </script>
     <script src="/js/support/service/support-list-service.js"></script>
     <script src="/js/support/layout/support-list-layout.js" ></script>
