모든 작업 서비스, 버그 픽스 완료

--- a/src/main/resources/templates/support/support-list.html
+++ b/src/main/resources/templates/support/support-list.html
@@ -35,8 +35,8 @@
                             class="accordion-container contest-list-filters"
                             type="box"
                         >
-<!--                                <div class="write-introduce" th:if="${memberType == 'NORMAL'}">-->
-                            <div class="write-introduce">
+                            <div class="write-introduce" th:if="${memberType == 'NORMAL'}">
+<!--                            <div class="write-introduce">  th:if 없이 테스트용 -->
                                 <div class="title">편하게 작성하세요!</div>
                                 <div class="desc">
                                     사소한 도움이라도 괜찮아요. 우리가 나누는
