--- a/src/main/resources/static/css/support/support-inquiry.css
+++ b/src/main/resources/static/css/support/support-inquiry.css
@@ -616,7 +616,7 @@ a {
     line-height: 23px;
     letter-spacing: -0.5px;
     font-weight: 700;
-    width: 100%;
+    width:150px;
 }
 
 .support-btn-style2 {
