--- a/src/main/resources/static/css/volunteer/volunteer-inquiry.css
+++ b/src/main/resources/static/css/volunteer/volunteer-inquiry.css
@@ -593,9 +593,11 @@ a {
 .volunteer-btn-container {
     position: relative;
     display: flex;
+    align-items: center;
     font-size: 12px;
     line-height: 18px;
     letter-spacing: -0.25px;
+    justify-content: space-evenly;
 }
 
 .volunteer-btn-style {
@@ -614,7 +616,7 @@ a {
     line-height: 23px;
     letter-spacing: -0.5px;
     font-weight: 700;
-    width: 100%;
+    width:150px;
 }
 
 .volunteer-btn-style2 {
@@ -622,8 +624,8 @@ a {
     position: relative;
     display: inline-flex;
     justify-content: center;
-
     align-items: center;
+    background-color: white;
     border-radius: 4px;
     cursor: pointer;
     text-align: center;
@@ -635,7 +637,8 @@ a {
     line-height: 23px;
     letter-spacing: -0.5px;
     font-weight: 700;
-    width: 100%;
+
+    width:142px;
 }
 
 .edit-button{
@@ -1098,7 +1101,7 @@ p {
     height: 24px;
 }
 
- li{
+li{
     list-style-type: none; /* 마커 제거 */
     padding: 0; /* 기본 패딩 제거 */
     margin: 0; /* 기본 마진 제거 */
@@ -1115,3 +1118,8 @@ p {
     outline: none;
     margin-top:20px;
 }
+
+.volunteer-btn-wrap{
+    display:flex;
+}
+
